--- a/stm32_netxduo/stm32_netxduo.ioc
+++ b/stm32_netxduo/stm32_netxduo.ioc
@@ -117,8 +117,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=netxduo.ioc
-ProjectManager.ProjectName=netxduo
+ProjectManager.ProjectFileName=stm32_netxduo.ioc
+ProjectManager.ProjectName=stm32_netxduo
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -127,7 +127,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -169,12 +169,14 @@ RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.BoardOoPartJjSTM32CubeIiBSPIiComponents_Checked=true
-STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.IPParameters=NX_ENABLE_INTERFACE_CAPABILITY,NX_APP_MEM_POOL_SIZE,TX_DISABLE_NOTIFY_CALLBACKS,TX_ENABLE_EXECUTION_CHANGE_NOTIFY,ThreadXCcRTOSJjThreadXJjCore,ThreadXCcRTOSJjThreadXJjTraceXOosupport,NetXDuoCcNetworkJjNetXDuoJjNXOoCore,NetXDuoCcNetworkJjNetXDuoJjAddonsOoAutoIP,InterfacesCcNetworkJjEthernetOoInterface,STM32CubeIiBSPIiComponentsCcBoardOoPartJjETHPhyJjLAN8742,InterfacesCcNetworkJjEthernetOoPhyOoInterface
+STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.IPParameters=NX_ENABLE_INTERFACE_CAPABILITY,NX_APP_MEM_POOL_SIZE,TX_DISABLE_NOTIFY_CALLBACKS,TX_ENABLE_EXECUTION_CHANGE_NOTIFY,NX_AUTO_IP_DEBUG,ThreadXCcRTOSJjThreadXJjCore,ThreadXCcRTOSJjThreadXJjTraceXOosupport,NetXDuoCcNetworkJjNetXDuoJjNXOoCore,NetXDuoCcNetworkJjNetXDuoJjAddonsOoAutoIP,NetXDuoCcNetworkJjNetXDuoJjAddonsOoDHCPOoClient,InterfacesCcNetworkJjEthernetOoInterface,STM32CubeIiBSPIiComponentsCcBoardOoPartJjETHPhyJjLAN8742,InterfacesCcNetworkJjEthernetOoPhyOoInterface
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.InterfacesCcNetworkJjEthernetOoInterface=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.InterfacesCcNetworkJjEthernetOoPhyOoInterface=LAN8742IiPhyIiInterface
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NX_APP_MEM_POOL_SIZE=30*1024
+STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NX_AUTO_IP_DEBUG=false
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NX_ENABLE_INTERFACE_CAPABILITY=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NetXDuoCcNetworkJjNetXDuoJjAddonsOoAutoIP=true
+STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NetXDuoCcNetworkJjNetXDuoJjAddonsOoDHCPOoClient=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NetXDuoCcNetworkJjNetXDuoJjNXOoCore=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NetworkJjInterfaces_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.NetworkJjNetXDuo_Checked=true
@@ -185,7 +187,7 @@ STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.TX_ENABLE_EXECUTION_CHANGE_NOTIFY=1
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.ThreadXCcRTOSJjThreadXJjCore=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.ThreadXCcRTOSJjThreadXJjTraceXOosupport=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0_IsAnAzureRtosMw=true
-STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0_SwParameter=NetXDuoCcNetworkJjNetXDuoJjAddonsOoAutoIP\:true;NetXDuoCcNetworkJjNetXDuoJjNXOoCore\:true;InterfacesCcNetworkJjEthernetOoInterface\:true;ThreadXCcRTOSJjThreadXJjTraceXOosupport\:true;ThreadXCcRTOSJjThreadXJjCore\:true;STM32CubeIiBSPIiComponentsCcBoardOoPartJjETHPhyJjLAN8742\:true;InterfacesCcNetworkJjEthernetOoPhyOoInterface\:LAN8742IiPhyIiInterface;
+STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0_SwParameter=NetXDuoCcNetworkJjNetXDuoJjAddonsOoAutoIP\:true;NetXDuoCcNetworkJjNetXDuoJjAddonsOoDHCPOoClient\:true;NetXDuoCcNetworkJjNetXDuoJjNXOoCore\:true;InterfacesCcNetworkJjEthernetOoInterface\:true;ThreadXCcRTOSJjThreadXJjTraceXOosupport\:true;ThreadXCcRTOSJjThreadXJjCore\:true;STM32CubeIiBSPIiComponentsCcBoardOoPartJjETHPhyJjLAN8742\:true;InterfacesCcNetworkJjEthernetOoPhyOoInterface\:LAN8742IiPhyIiInterface;
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_STMicroelectronics.X-CUBE-AZRTOS-F4_VS_BoardOoPartJjSTM32CubeIiBSPIiComponents_1.1.0_1.1.0.Mode=BoardOoPartJjSTM32CubeIiBSPIiComponents
